tests/snapshots/test_runner__tests__compiler__typecheck__unreachable_case_or_pattern_4.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
type Foo = #A(Foo) | #B

let spam
  : Foo -> String
  = {
    \#A(x) | #A(#A(x) | #A(#A(x))) -> "test"
    \ _ -> "Nope"
  }

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/unreachable_case_or_pattern_4.kk:6:14
  │
6 │     \#A(x) | #A(#A(x) | #A(#A(x))) -> "test"
  │              ^^^^^^^ Partially unreachable case
  │
  = This case is partially unreachable because it contains a redundant pattern that is already handled by previous cases.
    Namely:

        #A(#A(x))
