tests/snapshots/test_runner__tests__compiler__typecheck__unreachable_case_string_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo =
  \"hi" => 0
  \"hey" => 1
  \"hey" => 1
  \_ => 2

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/unreachable_case_string_1.kk:4:4
  │
4 │   \"hey" => 1
  │    ^^^^^ Unreachable case
  │
  = This case is unreachable because all possible cases are already handled by previous branches.
