tests/snapshots/test_runner__tests__compiler__typecheck__with_statement_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
// Expects no error
enum Option<T> {
  Some(T),
  None
}

let map = <A, B>(o: Option<A>, f: (a: A) => Option<B>): Option<B> =>
  switch(o) {
    case Some(o): o.f()
    case None: None
  }

export let foo = (a: Option<{bar:String}>): Option<String> => {
  with x = a.map;
  Some(x.bar)
}

do Some({bar: "hello world"}).foo().print()
do None.foo().print()

============
EXIT CODE
============
0

============
STDOUT
============
{ '$': 'Some', _: 'hello world' }
{ '$': 'None', _: null }

============
STDERR
============
